# geant4ScintSim

./: .gitattributes  .gitignore  .gitmodules  README.md
analysis/: sim_sweep.py
analysis/jupyter-notebooks/: Analysis_ScanForBestParam.ipynb  Analysis_test.ipynb  NN_Test.ipynb
analysis/pythonSimHelper/: __init__.py  main.py
sim/: CMakeCache.txt  CMakeLists.txt  Makefile  Sim  cmake_install.cmake  init_vis.mac  run1.mac  sim.cc  sim.cpp  vis.mac
sim/config/: config.json
sim/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  IOManager.hh  Materials.hh  PrimaryGeneratorAction.hh  RunAction.hh  SDTile.hh  SimCfg.hh  SteppingAction.hh  TileDetectorConstruction.hh
sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  IOManager.cc  Materials.cc  PrimaryGeneratorAction.cc  RunAction.cc  SDTile.cc  SimCfg.cc  SteppingAction.cc  TileDetectorConstruction.cc
